Performance issue on mobile - Fix #3

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,6 +8,7 @@
     url("/fonts/Inter-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -15,7 +16,8 @@
   src: url("/fonts/Inter-Bold.woff2") format("woff2"),
     url("/fonts/Inter-Bold.woff") format("woff");
   font-weight: 700;
-  font-style: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
 :root {
